# birt-gd

./: .gitignore  .pypirc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
example/: 00_example.ipynb  nb_utils.py
mc_analysis/: bootstrap.R  generate_data_mc_100_infs.csv  mc.py  mc_analysis_rse_rho.ipynb  run.py
mc_analysis/DataTreat/: __init__.py
mc_analysis/beta3/: generate_data_mc100_m100_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t1000_lr1.0.csv  generate_data_mc30_m100_i100_e50000_t1000_lr1.0.csv  generate_data_mc30_m20_i100_e50000_t1000_lr1.0.csv  generate_data_mc30_m50_i300_e50000_t1000_lr1.0.csv
mc_analysis/beta3fixed/: generate_data_mc100_m100_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t1000_lr1.0.csv
mc_analysis/beta4/: generate_data_mc100_m100_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t1000_lr1.0.csv  generate_data_mc30_m100_i100_e50000_t1000_lr1.0.csv  generate_data_mc30_m20_i100_e50000_t1000_lr1.0.csv  generate_data_mc30_m50_i300_e50000_t1000_lr1.0.csv
mc_analysis/mc_old_results/: stats_results_df_mc_0_i100_m100.csv  stats_results_df_mc_0_i100_m20.csv  stats_results_df_mc_0_i300_m50.csv  stats_results_df_mc_10_i100_m100.csv  stats_results_df_mc_10_i100_m20.csv  stats_results_df_mc_10_i300_m50.csv  stats_results_df_mc_11_i100_m100.csv  stats_results_df_mc_11_i100_m20.csv  stats_results_df_mc_11_i300_m50.csv  stats_results_df_mc_12_i100_m100.csv  stats_results_df_mc_12_i100_m20.csv  stats_results_df_mc_12_i300_m50.csv  stats_results_df_mc_13_i100_m100.csv  stats_results_df_mc_13_i100_m20.csv  stats_results_df_mc_13_i300_m50.csv  stats_results_df_mc_14_i100_m100.csv  stats_results_df_mc_14_i100_m20.csv  stats_results_df_mc_14_i300_m50.csv  stats_results_df_mc_15_i100_m100.csv  stats_results_df_mc_15_i100_m20.csv  stats_results_df_mc_15_i300_m50.csv  stats_results_df_mc_16_i100_m100.csv  stats_results_df_mc_16_i100_m20.csv  stats_results_df_mc_16_i300_m50.csv  stats_results_df_mc_17_i100_m100.csv  stats_results_df_mc_17_i100_m20.csv  stats_results_df_mc_17_i300_m50.csv  stats_results_df_mc_18_i100_m100.csv  stats_results_df_mc_18_i100_m20.csv  stats_results_df_mc_18_i300_m50.csv  stats_results_df_mc_19_i100_m100.csv  stats_results_df_mc_19_i100_m20.csv  stats_results_df_mc_19_i300_m50.csv  stats_results_df_mc_1_i100_m100.csv  stats_results_df_mc_1_i100_m20.csv  stats_results_df_mc_1_i300_m50.csv  stats_results_df_mc_20_i100_m100.csv  stats_results_df_mc_20_i100_m20.csv  stats_results_df_mc_20_i300_m50.csv  stats_results_df_mc_21_i100_m100.csv  (+263 more)
mc_analysis/mc_results/: Untitled.ipynb  generate_data_mc100_m100_i100_e10000_t0_lr1.0.csv  generate_data_mc100_m100_i100_e10000_t10000_lr1.0.csv  generate_data_mc100_m100_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m100_i100_e10000_t5000_lr1.0.csv  generate_data_mc100_m100_i100_e50000_t1_lr1.0.csv  generate_data_mc100_m20_i100_b50_e500_t1_lr0.1.csv  generate_data_mc100_m20_i100_b50_e500_t8_lr0.1.csv  generate_data_mc100_m20_i100_e10000_t0_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t10000_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t1000_lr1.0.csv  generate_data_mc100_m20_i100_e10000_t5000_lr1.0.csv  generate_data_mc100_m20_i100_e50000_t1_lr1.0.csv  generate_data_mc100_m20_i50_b50_e500_t1_lr0.1.csv  generate_data_mc100_m50_i300_e100000_t1_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t0_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t10000_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t1000_lr1.0.csv  generate_data_mc100_m50_i300_e10000_t5000_lr1.0.csv  generate_data_mc100_m50_i300_e50000_t1_lr1.0.csv  generate_data_mc_100.csv  (+1 more)
src/birt/: __init__.py  (+1 more)
(+1286 files in other folders)
