[metadata]
# replace with your username:
name = birt-gd
version = 0.1.45
author = Manuel Ferreira Junior
author_email = ferreira.jr.ufpb@gmail.com
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description =  BIRT is an implementation of Beta3-irt using gradient descent.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Manuelfjr/birt-gd
project_urls =
    Bug Tracker = https://github.com/Manuelfjr/birt-gd/issues
    Source Code = https://github.com/Manuelfjr/birt-gd/blob/main/src/birt/__init__.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.19.5
    tqdm>=4.59.0
    tensorflow>=2.5.0
    pandas>=1.2.3
    seaborn>=0.11.0
    matplotlib>=3.3.2
    scikit-learn>=0.23.2
python_requires = >=3.6

[options.packages.find]
where = src
exclude = 
    mc_analysis
